# rashodiki-bot

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a5677e324830_create_chat_table.py
rashodiki_bot/: db.py  main.py  model.py  parser.py  service.py  settings.py
rashodiki_bot/handlers/: __init__.py  bot.py  cancel.py  handlers.py  remove.py  settings.py  store.py
rashodiki_bot/service/: chat.py  workbook.py
tests/: test_parser.py
