[tool.poetry]
name = "rashodiki-bot"
version = "0.1.0"
description = "boksh rashodiki bot"
authors = ["boksh <e.bokshitskiy@hh.ru>"]
license = "UZAI ESLI HOCHESH"
packages = [{ include = "rashodiki_bot" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
aiogram = "^2.23.1"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.45"}
gspread-asyncio = "^1.7.1"
python-dotenv = "^0.21.0"
aiosqlite = "^0.18.0"
sqlalchemy-stubs = "^0.4"
alembic = "^1.9.1"
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
